@@ -1,3 +1,8 @@
+2013-01-23  Jean-Baptiste Kempf  <jbvideolan.org>
+
+	* GetFileAttributesA() and GetFileAttributesW() replacements
+	* WaitForSingleObject() replacement
+
 2013-01-21  Jean-Baptiste Kempf  <jbvideolan.org>
 
 	* InitializeCriticalSectionEx() replacement
